# access_control_

./: README.md
Project/: .mxproject  main.c
Project/Core/Inc/: main.h
Project/Core/Src/: main.c  ring_buffer.c  stm32l4xx_it.c  usart.c  wifi.c
Project/Project/: CMakeCache.txt  CMakeLists.txt  Project.ioc  cmake_install.cmake  compile_commands.json  readme.md
Project/Project/Core/Inc/: ring_buffer.h  stm32l4xx_it.h  wifi.h
Project/Project/Core/Src/: gpio.c  main.c  system_stm32l4xx.c
Project/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
Servidor/: app.py
Servidor/templates/: index.html
